<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingTop="50dp"
tools:context=".TempActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="10dp"
    android:text="@string/from"
    android:textColor="@color/black"
    android:textSize="25sp"
    android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    tools:ignore="UselessParent">

    <Spinner
        android:id="@+id/temp_spnr"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:scrollbarSize="20dp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/s_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/_1"
        android:inputType="numberDecimal"
        tools:ignore="Autofill,LabelFor" />

</LinearLayout>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="10dp"
    android:text="@string/to"
    android:textColor="@color/black"
    android:textSize="25sp"
    android:textStyle="bold"

    />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="UselessParent">

    <Spinner
        android:id="@+id/temp_spnr2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:scrollbarSize="20dp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/s_temp2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:inputType="none"
        android:editable="false"
        android:text="@string/_1"
        tools:ignore="Autofill,Deprecated,HardcodedText,LabelFor" />
</LinearLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/convert"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:onClick="temp_conv"
    />

</LinearLayout>